# Bartholomew

./: .env.example  .gitignore  Cargo.toml  flake.nix
migrations/: 20231014184958_init.sql
src/: main.rs
src/commands/: admins.rs  leads.rs  mod.rs  users.rs
src/db/: error.rs  mod.rs
src/test/: db.rs  mod.rs
