[package]
name = "bartholomew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
poise = "0.5.6"
sqlx = { version = "0.7", features = [ "runtime-tokio", "chrono", "sqlite", "migrate" ] }
tokio = { version = "1.33.0", features = ["full"] }
